logs/validate.20260406-164818.log
error[E0277]: the trait bound `T: Concurrency::Concurrency::StTInMtT` is not satisfied
    --> src/Chap18/ArraySeqMtEph.rs:1425:21
     |
1425 |                     apply_ninject_updates(lock1, left, Ghost(pred));
     |                     ^^^^^^^^^^^^^^^^^^^^^ the trait `std::fmt::Display` is not implemented for `T`
     |
note: required for `T` to implement `Types::Types::StT`
    --> src/Types.rs:126:13
     |
 126 |     impl<T> StT for T where T: Eq + Clone + Display + Debug + Sized + vstd::prelude::View {}
     |             ^^^     ^                       ------- unsatisfied trait bound introduced here
note: required for `T` to implement `Concurrency::Concurrency::StTInMtT`
    --> src/Concurrency.rs:72:13
     |
  72 |     impl<T> StTInMtT for T where T: StT + Send + Sync + 'static {}
     |             ^^^^^^^^     ^          --- unsatisfied trait bound introduced here
note: required by a bound in `Chap18::ArraySeqMtEph::ArraySeqMtEph::apply_ninject_updates`
    --> src/Chap18/ArraySeqMtEph.rs:1877:33
     |
1877 |     fn apply_ninject_updates<T: StTInMtT>(
     |                                 ^^^^^^^^ required by this bound in `apply_ninject_updates`
help: consider restricting type parameter `T` with trait `Display`
     |
 694 |     impl<T: std::fmt::Display> ArraySeqMtEphS<T> {
     |           +++++++++++++++++++

error[E0277]: the trait bound `T: Concurrency::Concurrency::StTInMtT` is not satisfied
    --> src/Chap18/ArraySeqMtEph.rs:1425:21
     |
1425 |                     apply_ninject_updates(lock1, left, Ghost(pred));
     |                     ^^^^^^^^^^^^^^^^^^^^^ the trait `std::fmt::Debug` is not implemented for `T`
     |
note: required for `T` to implement `Types::Types::StT`
    --> src/Types.rs:126:13
     |
 126 |     impl<T> StT for T where T: Eq + Clone + Display + Debug + Sized + vstd::prelude::View {}
     |             ^^^     ^                                 ----- unsatisfied trait bound introduced here
note: required for `T` to implement `Concurrency::Concurrency::StTInMtT`
    --> src/Concurrency.rs:72:13
     |
  72 |     impl<T> StTInMtT for T where T: StT + Send + Sync + 'static {}
     |             ^^^^^^^^     ^          --- unsatisfied trait bound introduced here
note: required by a bound in `Chap18::ArraySeqMtEph::ArraySeqMtEph::apply_ninject_updates`
    --> src/Chap18/ArraySeqMtEph.rs:1877:33
     |
1877 |     fn apply_ninject_updates<T: StTInMtT>(
     |                                 ^^^^^^^^ required by this bound in `apply_ninject_updates`
help: consider restricting type parameter `T` with trait `Debug`
     |
 694 |     impl<T: std::fmt::Debug> ArraySeqMtEphS<T> {
     |           +++++++++++++++++

error[E0277]: the trait bound `T: Concurrency::Concurrency::StTInMtT` is not satisfied
    --> src/Chap18/ArraySeqMtEph.rs:1425:21
     |
1425 |                     apply_ninject_updates(lock1, left, Ghost(pred));
     |                     ^^^^^^^^^^^^^^^^^^^^^ the trait `vstd::string::View` is not implemented for `T`
     |
note: required for `T` to implement `Types::Types::StT`
    --> src/Types.rs:126:13
     |
 126 |     impl<T> StT for T where T: Eq + Clone + Display + Debug + Sized + vstd::prelude::View {}
     |             ^^^     ^                                                 ------------------- unsatisfied trait bound introduced here
note: required for `T` to implement `Concurrency::Concurrency::StTInMtT`
    --> src/Concurrency.rs:72:13
     |
  72 |     impl<T> StTInMtT for T where T: StT + Send + Sync + 'static {}
     |             ^^^^^^^^     ^          --- unsatisfied trait bound introduced here
note: required by a bound in `Chap18::ArraySeqMtEph::ArraySeqMtEph::apply_ninject_updates`
    --> src/Chap18/ArraySeqMtEph.rs:1877:33
     |
1877 |     fn apply_ninject_updates<T: StTInMtT>(
     |                                 ^^^^^^^^ required by this bound in `apply_ninject_updates`
help: consider restricting type parameter `T` with trait `View`
     |
 694 |     impl<T: vstd::string::View> ArraySeqMtEphS<T> {
     |           ++++++++++++++++++++

error